--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Contact Us - Trupthi Tiffin Centre</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -132,7 +135,7 @@
     <div class="contact-info">
         <h2>Contact Information</h2>
         <p>Email: <a href="mailto:sasicatering@gmail.com">sasicatering@gmail.com</a></p>
-        <p>Phone: <a href="tel:9841131113">9841131113</a></p>
+        <p>Phone: <a href="tel:9841131113">9841131113/04443530003</a></p>
         <p>Address: <a href="https://maps.google.com/maps?q=No+18%2F6%2C+Boopathy+Nagar%2C+Ayanavaram%2C+Chennai+-+600023" target="_blank">No 18/6, Boopathy Nagar, Ayanavaram, Chennai - 600023</a></p>
         <div class="contact-details">
             <div class="contact-details-item">
@@ -141,7 +144,7 @@
             </div>
             <div class="contact-details-item">
                 <img src="pngwing.com.png" alt="Phone Icon">
-                <a href="tel:9841131113">Call</a>
+                <a href="tel:04443530003">Call</a>
             </div>
         </div>
     </div>
